[package]
name = "s3cdn"
description = "S3 Content Delivery Node"
authors = ["Nikolay Ishiev <ishiev@primetver.ru>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
rocket = "0.5.0-rc.2"
rust-s3 = "0.32"
serde = { version = "1", features = ["derive"] }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
