[package]
name = "s3cdn"
description = "S3 Content Delivery Node"
authors = ["Nikolay Ishiev <ishiev@primetver.ru>"]
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
rocket = "0.5.0-rc.2"
aws-region = { version = "0.25.1", features = ["serde"] }
rust-s3 = { git = "https://github.com/ishiev/rust-s3.git" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssri = "8"
url = { version = "2", features = ["serde"] }
cacache = { version = "*", default-features = false, features = ["tokio-runtime"] }
time = "0.3"

[patch."https://github.com/ishiev/rust-s3.git"]
rust-s3 = { path = "../rust-s3/s3" }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
