[package]
name = "s3cdn"
description = "S3 Content Delivery Node"
authors = ["Nikolay Ishiev <ishiev@primetver.ru>"]
version = "0.6.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
async-stream = "0.3"
axum = "0.6"
axum-macros = "0.3"
log = "0.4"
pretty_env_logger = "0.5"
figment = { version = "0.10", features = ["env", "toml"] }
http = "0.2"
http-serde = "1.1"
httpdate = "1"
aws-region = { version = "0.25.1", features = ["serde"] }
rust-s3 = { git = "https://github.com/ishiev/rust-s3.git" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssri = "*"
cacache = { version = "*", default-features = false, features = ["tokio-runtime"] }
moka = { version = "0.10", features = ["future"] }
sha1 = "0.10"
hex = "0.4"
walkdir = "2.3.3"
thiserror = "1.0"

[dev-dependencies]
rand = "0.8"

[patch."https://github.com/ishiev/rust-s3.git"]
rust-s3 = { path = "../rust-s3/s3" }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
